# ros2-mecanum-bot

./: README.md
gui/: HelperComponents.py  ProjectControls.py  SpeechRecorder.py  main.py
mecanumbot_GUI/: GUI.py  main.py
mecanumbot_bringup/launch/: hardware_test.py  launch_all.py  mecanumbot_gazebo.py  mecanumbot_gazebo2.py  mecanumbot_lidar.py  mecanumbot_teleop2.py
mecanumbot_controller/: CMakeLists.txt
mecanumbot_controller/config/: teleop_config.yaml
mecanumbot_controller/include/mecanumbot_controller/: mecanumbot_drive_controller.hpp
mecanumbot_controller/src/: mecanumbot_drive_controller.cpp
mecanumbot_description/: CMakeLists.txt
mecanumbot_description/config/: robot_controller_config.yaml
mecanumbot_description/urdf/: mecanumbot.urdf
mecanumbot_hardware/: CMakeLists.txt  package.xml
mecanumbot_hardware/include/mecanumbot_hardware/: Wheel.hpp  arduino_comms.hpp  mecanumbot_odometry.hpp  mecbot_system.hpp
mecanumbot_hardware/src/: GUI_subscriber.hpp  mecanumbot_hardware.cpp  mecanumbot_odometry.cpp
mecanumbot_teleop/config/: teleop_config.yaml
